--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -134,7 +134,7 @@ add_test_file(mergedproxymodel_test.cpp false)
 add_test_file(musicbrainzclient_test.cpp false)
 add_test_file(organiseformat_test.cpp false)
 add_test_file(organisedialog_test.cpp false)
-#add_test_file(playlist_test.cpp true)
+add_test_file(playlist_test.cpp true)
 #add_test_file(plsparser_test.cpp false)
 add_test_file(scopedtransaction_test.cpp false)
 #add_test_file(songloader_test.cpp false)
